k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: weather-app
spec:
  selector:
    app: frontend

  ports:
  - name: http
    port: 80
    targetPort: 80

  - name: https
    port: 443
    targetPort: 443  

  type: ClusterIP
