k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: weather-app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec: 
    ingressClassName: nginx

    rules: 
    - host: weather-local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend: 
            service:
              name: frontend-service
              port:
                number: 80

      https:
        paths:
        - path: /
          pathType: prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 443
